--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -170,6 +170,7 @@
 <li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
 <li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
 <li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+<li class="chapter" data-level="10.7" data-path="对战ai策略.html"><a href="对战ai策略.html#在哪找对练"><i class="fa fa-check"></i><b>10.7</b> 在哪找对练？<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -191,7 +192,7 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-04-29</em></p>
+<p class="date"><em>更新时间：2022-05-10</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -199,6 +200,11 @@
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>（只包含主要的更新，不含小修改）</em></p>
 <ul>
+<li>2022年5月10日：
+<ul>
+<li>新增<a href="对战ai策略.html#在哪找对练">在哪找对练？</a>一节，介绍最快在哪里能找到特定的机器人对手进行练习。</li>
+<li>细化<a href="战士系.html#阿尔茜">阿尔茜</a>小枪爆头心得，调整<a href="侦查系.html#横炮">横炮</a>与<a href="侦查系.html#爵士">爵士</a>。</li>
+</ul></li>
 <li>2022年4月29日：
 <ul>
 <li>修正<a href="术语与打法.html#侧闪反击">侧闪反击</a></li>
