--- a/chars_book/对战ai策略.html
+++ b/chars_book/对战ai策略.html
@@ -170,6 +170,7 @@
 <li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
 <li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
 <li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+<li class="chapter" data-level="10.7" data-path="对战ai策略.html"><a href="对战ai策略.html#在哪找对练"><i class="fa fa-check"></i><b>10.7</b> 在哪找对练？<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -385,7 +386,7 @@
 <div id="对战ai横炮" class="section level3 hasAnchor" number="10.4.3">
 <h3><span class="header-section-number">10.4.3</span> 对战AI横炮<a href="对战ai策略.html#对战ai横炮" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>横炮在被近战打到7下会出规避，看到规避后就要控制好节奏。S2结束后也有近战规避，所以闪掉了之后就先打三枪回去再说。</p>
-<p>横炮的气也来的很快<a href="#fn11" class="footnote-ref" id="fnref11"><sup>11</sup></a>：闪避小枪会加气，招牌更是有如自带机器人资源模块。面对高觉醒的横炮，开局尽量躲远一点，让他自己加气，然后骗掉一个S1再说，否则开局就放开了打近战加对枪，很可能你都没反应过来他就给你来个S3。</p>
+<p>横炮的气也来的很快<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a>：闪避小枪会加气，招牌更是有如自带机器人资源模块。面对高觉醒的横炮，开局尽量躲远一点，让他自己加气，然后骗掉一个S1再说，否则开局就放开了打近战加对枪，很可能你都没反应过来他就给你来个S3。</p>
 <p><strong>S1：后，后，后；S2：后，后，侧或后</strong>。横炮的S1如果压在墙角，最后的踩头要看准了闪。S2和阿尔茜的S1类似，最后一下躲开射击点就行。</p>
 </div>
 <div id="对战ai警车" class="section level3 hasAnchor" number="10.4.4">
@@ -514,10 +515,264 @@
 <h3><span class="header-section-number">10.6.8</span> 对战AI飞过山<a href="对战ai策略.html#对战ai飞过山" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>飞过山的技能不痛不痒，没有其他爆破系的爆发（至少电脑很难在玩家身上发挥出这个优势），没有什么可怕的。多骗S1就好。</p>
 <p><strong>S1：后，侧；S2：侧，侧，侧，侧，侧</strong>，分别是震荡波和电影铁皮的技能。</p>
+</div>
+</div>
+<div id="在哪找对练" class="section level2 hasAnchor" number="10.7">
+<h2><span class="header-section-number">10.7</span> 在哪找对练？<a href="对战ai策略.html#在哪找对练" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>要熟悉如何对战这么多AI角色，打竞技场是个不错的选择，但竞技场第一不能想碰谁就碰谁，第二自己的角色用一局就不能再用了，就怎样能实现<strong>想打谁就打谁</strong>呢？</p>
+<p>特殊任务虽然敌人很强，但每个月都会换，只有故事模式和传奇模式的对手是一成不变的，所以最省能量的方法就是找进图第一位。于是我盘点了所有角色在故事和传奇中最早能遇到的位置，可以说大部分角色都能找到并且跑几步就能跑到，不是很耗能量。</p>
+<p>既然是练习，太弱的对手意义不大。传奇1和2都是一条线，分别取了看门的搅拌者和猩猩队长。传奇3每条线取了看门的。剩下的对手大部分位于故事模式第3和第4章，战力在几千到两万之间，所以需要<strong>把故事探索完</strong>并且<strong>挑选合适的机器人去练</strong>，你自己的主力如果碾压对方，也起不到对练的效果了。</p>
+<p>以下如无特别说明，都是进入关卡后某条分支路线上的第一位。反冲和野牛实在找不到，所幸他们都在某个关底当Boss。几个近期的新人物如飞过山、挽歌、闹翻天和G1铁皮比故事模式都要新，所以也没有，但相信他们几个肯定会在新的盟战地图中折腾大家很长时间的。</p>
+<table>
+<colgroup>
+<col width="50%" />
+<col width="50%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center"><strong>人物</strong></th>
+<th align="center"><strong>位置</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">战威</td>
+<td align="center">4幕3章4关，4幕4章2关，4幕4章5关</td>
+</tr>
+<tr class="even">
+<td align="center">恐龙勇士</td>
+<td align="center">4幕3章2关</td>
+</tr>
+<tr class="odd">
+<td align="center">战擎</td>
+<td align="center">4幕1章3关，4幕1章5关，4幕3章5关</td>
+</tr>
+<tr class="even">
+<td align="center">通天晓</td>
+<td align="center">传奇3斗士门，4幕4章3关</td>
+</tr>
+<tr class="odd">
+<td align="center">红蜘蛛</td>
+<td align="center">3幕3章1关</td>
+</tr>
+<tr class="even">
+<td align="center">大黄蜂</td>
+<td align="center">4幕2章2关</td>
+</tr>
+<tr class="odd">
+<td align="center">狂飙</td>
+<td align="center">4幕1章1关，4幕2章6关</td>
+</tr>
+<tr class="even">
+<td align="center">暗黑擎天柱</td>
+<td align="center">4幕3章6关</td>
+</tr>
+<tr class="odd">
+<td align="center">碾碎器</td>
+<td align="center">4幕2章2关，4幕3章3关</td>
+</tr>
+<tr class="even">
+<td align="center">猩猩队长</td>
+<td align="center">传奇3战士门，传奇2进门，4幕1章3关，4幕3章5关</td>
+</tr>
+<tr class="odd">
+<td align="center">钢锁</td>
+<td align="center">4幕1章4关，4幕3章5关，4幕4章1关</td>
+</tr>
+<tr class="even">
+<td align="center">斗擎</td>
+<td align="center">4幕2章1关</td>
+</tr>
+<tr class="odd">
+<td align="center">汽车大师</td>
+<td align="center">4幕1章2关，4幕4章5关</td>
+</tr>
+<tr class="even">
+<td align="center">野牛</td>
+<td align="center">4幕4章3关底</td>
+</tr>
+<tr class="odd">
+<td align="center">惊天雷</td>
+<td align="center">4幕3章1关</td>
+</tr>
+<tr class="even">
+<td align="center">G1铁皮</td>
+<td align="center">暂无</td>
+</tr>
+<tr class="odd">
+<td align="center">雷震</td>
+<td align="center">4幕1章5关，4幕2章1关</td>
+</tr>
+<tr class="even">
+<td align="center">探长</td>
+<td align="center">4幕2章4关</td>
+</tr>
+<tr class="odd">
+<td align="center">碎骨魔</td>
+<td align="center">传奇3侦查门，4幕2章3关，4幕3章3关</td>
+</tr>
+<tr class="even">
+<td align="center">漂移</td>
+<td align="center">4幕4章4关</td>
+</tr>
+<tr class="odd">
+<td align="center">阿尔茜</td>
+<td align="center">4幕4章3关</td>
+</tr>
+<tr class="even">
+<td align="center">热破</td>
+<td align="center">4幕2章5关</td>
+</tr>
+<tr class="odd">
+<td align="center">巨蝎勇士</td>
+<td align="center">4幕2章5关，4幕3章2关，4幕4章2关，4幕4章4关</td>
+</tr>
+<tr class="even">
+<td align="center">亡灵天尊</td>
+<td align="center">4幕4章6关</td>
+</tr>
+<tr class="odd">
+<td align="center">挽歌</td>
+<td align="center">暂无</td>
+</tr>
+<tr class="even">
+<td align="center">风刃</td>
+<td align="center">3幕2章1关，3幕2章5关</td>
+</tr>
+<tr class="odd">
+<td align="center">路障</td>
+<td align="center">4幕1章4关</td>
+</tr>
+<tr class="even">
+<td align="center">小黄蜂</td>
+<td align="center">4幕3章1关，4幕4章1关</td>
+</tr>
+<tr class="odd">
+<td align="center">横炮</td>
+<td align="center">4幕2章3关</td>
+</tr>
+<tr class="even">
+<td align="center">反冲</td>
+<td align="center">4幕4章2关底</td>
+</tr>
+<tr class="odd">
+<td align="center">警车</td>
+<td align="center">传奇3科技门，3幕3章2关，3幕4章4关</td>
+</tr>
+<tr class="even">
+<td align="center">爵士</td>
+<td align="center">4幕4章5关</td>
+</tr>
+<tr class="odd">
+<td align="center">黄豹</td>
+<td align="center">4幕3章4关</td>
+</tr>
+<tr class="even">
+<td align="center">声波</td>
+<td align="center">4幕1章1关，4幕3章1关，4幕3章4关</td>
+</tr>
+<tr class="odd">
+<td align="center">震荡波</td>
+<td align="center">4幕4章2关</td>
+</tr>
+<tr class="even">
+<td align="center">犀牛</td>
+<td align="center">3幕2章4关，3幕4章3关</td>
+</tr>
+<tr class="odd">
+<td align="center">救护车</td>
+<td align="center">4幕1章3关，3幕1章3关</td>
+</tr>
+<tr class="even">
+<td align="center">幻影</td>
+<td align="center">4幕2章3关</td>
+</tr>
+<tr class="odd">
+<td align="center">录音机</td>
+<td align="center">4幕2章4关</td>
+</tr>
+<tr class="even">
+<td align="center">千斤顶</td>
+<td align="center">4幕2章5关</td>
+</tr>
+<tr class="odd">
+<td align="center">天火</td>
+<td align="center">传奇3爆破门，4幕3章2关，4幕4章4关</td>
+</tr>
+<tr class="even">
+<td align="center">闹翻天</td>
+<td align="center">暂无</td>
+</tr>
+<tr class="odd">
+<td align="center">爆威</td>
+<td align="center">4幕2章1关，4幕3章3关，4幕4章3关</td>
+</tr>
+<tr class="even">
+<td align="center">黄蜂</td>
+<td align="center">4幕1章2关，4幕2章2关，4幕3章1关，4幕4章1关</td>
+</tr>
+<tr class="odd">
+<td align="center">爆破铁皮</td>
+<td align="center">4幕1章3关，4幕1章5关，4幕4章4关</td>
+</tr>
+<tr class="even">
+<td align="center">喷气机</td>
+<td align="center">4幕1章2关，4幕3章5关</td>
+</tr>
+<tr class="odd">
+<td align="center">惊破天</td>
+<td align="center">传奇3战术门，4幕2章6关</td>
+</tr>
+<tr class="even">
+<td align="center">搅拌者</td>
+<td align="center">传奇1进门，4幕1章4关</td>
+</tr>
+<tr class="odd">
+<td align="center">震天尊</td>
+<td align="center">4幕1章6关</td>
+</tr>
+<tr class="even">
+<td align="center">飞过山</td>
+<td align="center">暂无</td>
+</tr>
+<tr class="odd">
+<td align="center">战术鲨鱼</td>
+<td align="center">4幕2章4关，4幕3章4关，4幕3章5关，3幕2章6关</td>
+</tr>
+<tr class="even">
+<td align="center">斗士鲨鱼</td>
+<td align="center">4幕4章5关，3幕2章6关</td>
+</tr>
+<tr class="odd">
+<td align="center">战士鲨鱼</td>
+<td align="center">4幕1章4关，4幕2章2关，4幕2章4关，4幕2章5关，4幕3章3关，4幕4章3关，3幕2章6关</td>
+</tr>
+<tr class="even">
+<td align="center">侦查鲨鱼</td>
+<td align="center">4幕1章5关，4幕2章3关，4幕4章5关，3幕2章6关</td>
+</tr>
+<tr class="odd">
+<td align="center">科技鲨鱼</td>
+<td align="center">4幕1章5关，3幕2章6关</td>
+</tr>
+<tr class="even">
+<td align="center">爆破鲨鱼</td>
+<td align="center">4幕2章5关，4幕4章1关，3幕2章6关</td>
+</tr>
+<tr class="odd">
+<td align="center">S1000</td>
+<td align="center">3幕1章5关底，3幕3章5关底</td>
+</tr>
+</tbody>
+</table>
 
 </div>
 </div>
-</div>
+
+
+
+
+
 
 
 
@@ -536,8 +791,8 @@
 
 <div class="footnotes">
 <hr />
-<ol start="11">
-<li id="fn11"><p>是非常快<a href="对战ai策略.html#fnref11" class="footnote-back">↩︎</a></p></li>
+<ol start="16">
+<li id="fn16"><p>是非常快<a href="对战ai策略.html#fnref16" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
