--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -170,6 +170,7 @@
 <li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
 <li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
 <li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+<li class="chapter" data-level="10.7" data-path="对战ai策略.html"><a href="对战ai策略.html#在哪找对练"><i class="fa fa-check"></i><b>10.7</b> 在哪找对练？<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -289,21 +290,27 @@
 <!--Note-->
 <div id="特点分析-18" class="section level3 hasAnchor" number="5.3.1">
 <h3><span class="header-section-number">5.3.1</span> 特点分析<a href="战士系.html#特点分析-18" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>作为游戏中为数不多的女性，阿尔茜的人气不低，在内测版中曾经很强，“玻璃大炮”的称号说的就是她，公测版后被削弱之后因为只能暴击加气让她一直不温不火，再度调整后（恢复正常加气、明确之前隐藏的爆头能力）又赢回了一定的关注度。</p>
+<p>阿尔茜在内测版中曾经很强，“玻璃大炮”的称号说的就是她，公测版后被削弱之后因为只能暴击加气让她一直不温不火，再度调整后（恢复正常加气、明确之前隐藏的爆头能力）又赢回了一定的关注度。</p>
+<p>作为游戏中为数不多的女性，卡邦在设计上很可能是参考了IDW 2005漫画宇宙中的那个疯狂的女战士，设计出这位“三暴女郎”：<strong>暴</strong>击来气，<strong>爆</strong>头射击，招牌也叫“残<strong>暴</strong>”！</p>
 <div id="能力-18" class="section level4 hasAnchor" number="5.3.1.1">
 <h4><span class="header-section-number">5.3.1.1</span> 能力<a href="战士系.html#能力-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>阿尔茜的小枪爆头流血能力是很经济的输出手段，尤其是抓准前冲对手打出多次爆头的时候简直血崩。被爆头流血的对手在侧闪和后闪时还会进一步加大伤害。</li>
-<li>各种暴击额外获得能量，让阿尔茜的气来得特别快。运气好的时候在S1的过程中打出一两个爆头，不但伤害爆炸，还可能又攒满下一个S1。</li>
-<li>阿尔茜面对远程攻击拥有天生的规避能力，甚至可以从特殊技和重击中脱身，有时能让玩家受益，但作为电脑对手经常坑远程玩家，例如铁皮一个S2明明连上了，最后一发要抹杀的时候给你规避掉就呵呵了。然而你用阿尔茜面对铁皮的S2时，她给你规避前一发，后一发你死按着防也会吃下！通天晓的锤子因为要侧闪，阿尔茜也会给你规避掉。另外这个能力和“镇静”有点bug，开了镇静精通的人近战打阿尔茜有时自己就会触发霸体。</li>
-<li>S1后射速的提升让阿尔茜的枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了爆头的能力。而且因为卡邦这个游戏的子弹判定“命中”是按判定框来算，所以有时电脑侧闪了也会挂流血</li>
-<li>S2在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把砍人（另一把难道只是用来平衡双手的？）…难怪伤害也低，偶尔需要物理攻击的时候可以考虑。</li>
-<li>由于S1优秀S2鸡肋，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的较好补充。曾经S3的狙击在猩猩黄甲上打不出流血，后来修正正常了。</li>
+<li>爆头射击：
+<ul>
+<li>阿尔茜的小枪或者特殊技中的远程子弹如果暴击，有很高的概率流血（爆头射击），这是她最主要的输出手段，因为爆头射击不仅施加一个DOT流血，而有一份瞬间兑现的伤害。</li>
+<li>对方冲向阿尔茜时小枪暴击率+58%（六阶），加上阿尔茜天然的高暴击，经常可以把对手打成筛子。被爆头流血的对手在侧闪和后闪时还会进一步加大伤害（但是人物信息中没有明确说明加多少伤害，游戏中也不太容易看出）。</li>
+</ul></li>
+<li>每次暴击时额外获得一格能量的12%，加上她的近战是7连击，让阿尔茜的气来得特别快。因为这个特性，她S技的暴击也能加气：运气好的时候在S1的过程中打出一两个爆头，不但伤害爆炸，还可能又攒满下一个S1。</li>
+<li>阿尔茜面对<strong>各类</strong>远程攻击拥有天生的规避能力（六阶有23%的概率)，甚至不管她是在变车撞向对手，还是被特殊技打击，只要是远程攻击，她都可能脱身。通天晓的锤子因为要侧闪，阿尔茜也会给你规避掉。当然，如果规避能力被抑制的时候（如黄豹的招牌，热破的减速和探长的精准弹药），阿尔茜是规避不了的。这项能力有时能让玩家受益，但作为电脑对手经常坑远程玩家，例如铁皮一个S2明明连上了，最后一发要抹杀的时候电脑的阿尔茜给你规避掉就呵呵了。然而你用阿尔茜面对铁皮的S2时，她给你规避前一发，后一发你死按着防也会吃下！另外这个能力和“镇静”有点bug，开了镇静精通的人近战打阿尔茜有时自己就会触发霸体。</li>
+<li>大部分角色是S2比较强，阿尔茜则拥有这个游戏中为数不多的优秀S1：一方面她S1中有三发小枪，比起点枪对射中可怜的命中率，这三发小枪连上S1可是妥妥地必中，自然提高了出爆头的概率。而S1之后的小枪不但增伤，还提升射速，阿尔茜“嗖嗖”的小枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了命中率。而且因为卡邦这个游戏的子弹判定“命中”是按判定框来算，所以有时电脑侧闪了也会挂上流血。</li>
+<li>S2在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把砍人（另一把难道只是用来平衡双手的？）…难怪伤害也低，虽然出暴击时100%能流血，但是流血的伤害只有69.3%（六阶），而S1的三发子弹只要爆头一发就已经120%的伤害了。所以……偶尔需要用物理攻击的时候（比如对方是幻影，或者有能量抗性模块）可以考虑。</li>
+<li>由于S1优秀S2鸡肋<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的兜底，因为S3前面就有几发小枪可以打爆发，最后的狙击枪100%能施加流血<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>。</li>
 </ul>
+<p>虽然阿尔茜是近战型的重击，近战连击也是7连击，但她并不是一个近战型的选手，她所有的近战就是为了给自己加气到S1，再用小枪杀人！</p>
 </div>
 <div id="招牌-17" class="section level4 hasAnchor" number="5.3.1.2">
 <h4><span class="header-section-number">5.3.1.2</span> 招牌<a href="战士系.html#招牌-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>概率获得精准增益，加暴击率，阻止规避10秒。虽然是个看脸的招牌，但由于是100%治疗规避，所以阿尔茜在一个S1击倒路障后如果出了招牌，对方是无能为力的。而且初始概率就有45%左右，还是很有效的。</p>
+<p>概率获得精准增益，加25%暴击率，阻止规避10秒。虽然是个看脸的招牌，但由于是100%治疗规避，所以阿尔茜在一个S1击倒路障后如果出了招牌，对方是无能为力的。而且初始概率就有45%左右，还是很有效的。</p>
 <p>2021年9月9日对这个招牌做了加强：</p>
 <ul>
 <li>S1和S2动画结束后才开始倒计时</li>
@@ -312,28 +319,28 @@
 </div>
 <div id="协同-17" class="section level4 hasAnchor" number="5.3.1.3">
 <h4><span class="header-section-number">5.3.1.3</span> 协同<a href="战士系.html#协同-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>阿尔茜的协同很一般，女性角色不应该有很多“羁绊”吗？可能也是为了限制她变得过强吧。</p>
 <ul>
-<li>搭配幻影和探长后进一步加强远程小枪的暴击。</li>
+<li>神射手（双向，幻影和探长）：最高加20%远程攻击的暴击率。</li>
+<li>盟友（大黄蜂，录音机）：加护甲。</li>
+<li>敌人（</li>
 <li>与通天晓一同出战时，队中汽车人加攻，突袭中额外加伤害减益。</li>
 </ul>
 </div>
 <div id="短板-18" class="section level4 hasAnchor" number="5.3.1.4">
 <h4><span class="header-section-number">5.3.1.4</span> 短板<a href="战士系.html#短板-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>阿尔茜的攻击在战士中排名第一（全人物第8），血量垫底（全人物倒数第8），这样的天壤之别真是“玻璃大炮”。所以要用好阿尔茜，续航是个大问题。另外因为暴击加气这种随机事件，能量的涨跌不定容易影响战术部署。S2太差也影响了一定的输出。</p>
+<p>阿尔茜的攻击在战士中排名第一（全人物第8），血量垫底（全人物倒数第8），这样的天壤之别真是“玻璃大炮”。所以要用好阿尔茜，续航是个大问题。另外因为暴击加气这种随机事件，能量的涨跌不定对于刚刚上手的玩家来说可能会影响战术部署。S2太差，也许是为了让她不要太强大。</p>
 </div>
 </div>
 <div id="推荐打法-18" class="section level3 hasAnchor" number="5.3.2">
 <h3><span class="header-section-number">5.3.2</span> 推荐打法<a href="战士系.html#推荐打法-18" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-17" class="section level4 hasAnchor" number="5.3.2.1">
-<h4><span class="header-section-number">5.3.2.1</span> 短战斗<a href="战士系.html#短战斗-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>不考虑续航的话求速攻，近战和重击快速攒气，有S1后击倒对手，对方起身时因为离你较远，不太可能放特殊技，轻点一枪压迫防御，再用节奏的变化击打侧闪中的对手。</p>
-</div>
-<div id="长战斗-17" class="section level4 hasAnchor" number="5.3.2.2">
-<h4><span class="header-section-number">5.3.2.2</span> 长战斗<a href="战士系.html#长战斗-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在短战斗的打法上保证安全，不确定的场合宁可多与对手对枪。对方在对枪时如果有破绽但自己气槽较低，这时两枪前冲打一套不一定能攒到S1，还不如出三枪搏一搏爆头。</p>
-<p>在战斗中时刻注意自己的气槽，如果一不小心快到S2又没机会打出S1，不如直上S3。</p>
-<p>战斗中还要注意别被自己的远程规避给坑了。有时自己一个失误冲向或者撞向对方子弹的时候阿尔茜出了规避，如果你没反应过来，正好被对方接下来的近战打中。所以在前冲和重击的过程中最好多点几次右边屏幕，以便第一时间抢攻。</p>
-</div>
+<p>阿尔茜属于非常好上手的角色，因为打法非常简单，无论战斗的长短，目标都是在阵地战中用近战暴击把S1攒出来，再用小枪的射速和爆头反复围绕S1打伤害。打得顺风顺水的时候可能非常快地结束战斗，偶尔因为气来得太快，可以用用S3。</p>
+<p>为了保证暴击和伤害，精通里面的暴击率要点满，深度创伤也往高了升。</p>
+<p>但是使用阿尔茜的分水岭在于能不能打准小枪，打准小枪有两种关键的方式：</p>
+<ul>
+<li><strong>追身枪</strong>：有射速提升的时候如果感觉到对方要侧闪时，至少放两枪，对方闪过前面一枪很大概率中第二枪（你要是被阿尔茜和幻影的小枪折磨过，一定知道我在说什么）</li>
+<li><strong>诱冲爆头枪</strong>：在命中S1落地后，不要急于开枪压制，而是等对手完全起身后点一发冷枪然后按住防御，无论对方中了、防御或者侧闪，都没关系。关键是要等对方完全恢复行动能力之后再略等片刻，放两枪，这时对方很可能是前冲被爆头，不但如此，两枪爆头之后略等片刻再开枪，还会打中前冲的对手，这时出现<strong>最好的结果</strong>：对方中两枪之后反而进入你的近战攻击范围，此时接着按攻击，又是一套7连加S1。<strong>最差的结果</strong>是对方起来跟你对枪，此时就回到前面的远程牵制追身枪的打法。</li>
+</ul>
 </div>
 <div id="基地防守-18" class="section level3 hasAnchor" number="5.3.3">
 <h3><span class="header-section-number">5.3.3</span> 基地防守<a href="战士系.html#基地防守-18" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -352,37 +359,44 @@
 <div id="能力-19" class="section level4 hasAnchor" number="5.4.1.1">
 <h4><span class="header-section-number">5.4.1.1</span> 能力<a href="战士系.html#能力-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>连击槽到5的时候获得精准（提升暴击，抑制规避），到10的时候提升暴击伤害。这让漂移面对计数7出规避的横炮可以先人一步。</li>
+<li>连击槽到5的时候获得精准（提升暴击率20~30%，抑制规避75~85%），这让漂移面对计数7出规避的横炮可以先人一步。连击到10的时候提升暴击伤害20~40%。被电脑打中后清零。</li>
 <li>重击击倒也可以获得精准，这让漂移面对倒地出规避的路障颇有心得。</li>
-<li>近战暴击60%概率流血（2秒，15~25%的攻），相比雷震和风刃概率更高，但时间和强度差一些。但在流血能力上漂移还有亮点：三个S技均稳定出流血，不依赖暴击。</li>
+<li>近战暴击60%概率流血，施加15~25%的流血伤害2秒，相比雷震和风刃，概率更高，但时间和强度差一些。</li>
 <li>面对流血对手，漂移自带20%的规避，这让漂移在施加S2和S3之后的安全性也略有提升。在面对配伤害加速器的漂移时，如果没有净化流血的方法，那对面等于额外多了个夜莺。</li>
+<li>漂移的三个S技就是各种流血的混搭，流血的概率不依赖暴击
+<ul>
+<li>S1：80%的概率流血，施加20~40%的流血伤害3秒，最多两层</li>
+<li>S2：最后一下100%施加100%的流血伤害10秒，平时最主要的输出方式，在伤害和流血稳定性上都是最佳的</li>
+<li>S3：前面的旋风刀刃攻击80%的概率流血，施加20~40%的流血伤害3秒，最多两层；最后一把大刀80~100%的概率施加50~100%的流血伤害10秒</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-18" class="section level4 hasAnchor" number="5.4.1.2">
 <h4><span class="header-section-number">5.4.1.2</span> 招牌<a href="战士系.html#招牌-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间。</p>
+<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>。</p>
 </div>
 <div id="协同-18" class="section level4 hasAnchor" number="5.4.1.3">
 <h4><span class="header-section-number">5.4.1.3</span> 协同<a href="战士系.html#协同-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>剑圣：不赘述。</li>
-<li>搭配探长，开局回血。</li>
+<li>先生/盟友（双向：斗擎，探长）：加护甲</li>
+<li>剑圣（双向：风刃，雷震，恐龙勇士）：不赘述。</li>
+<li>探长：开局回血。</li>
 </ul>
 </div>
 <div id="短板-19" class="section level4 hasAnchor" number="5.4.1.4">
 <h4><span class="header-section-number">5.4.1.4</span> 短板<a href="战士系.html#短板-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>漂移的飞刀虽然也能造流血，但由于所有的招数全是物理攻击，在面对通天晓的时候他完全没有办法让对方切换抗性。面对盟战的猩猩Boss，由于漂移的S技流血太稳定，铁定给对方回更多的血，导致漂移基本上无法上场。</p>
+<p>漂移的技能偏科到了极限：全近战，全物理攻击。在面对通天晓的时候他完全没有办法让对方切换抗性。面对猩猩的时候，只要放S技，基本上是给对方回血。</p>
 </div>
 </div>
 <div id="推荐打法-19" class="section level3 hasAnchor" number="5.4.2">
 <h3><span class="header-section-number">5.4.2</span> 推荐打法<a href="战士系.html#推荐打法-19" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>漂移在打开追星者精通后可以进一步完善高连击后的输出，深度创伤精通也可以补足流血时间的短板。</p>
-<div id="短战斗-18" class="section level4 hasAnchor" number="5.4.2.1">
-<h4><span class="header-section-number">5.4.2.1</span> 短战斗<a href="战士系.html#短战斗-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-17" class="section level4 hasAnchor" number="5.4.2.1">
+<h4><span class="header-section-number">5.4.2.1</span> 短战斗<a href="战士系.html#短战斗-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗配合重击，尽早拿到精准增益，暴击伤害和触发招牌，输出手段尽量靠S2。</p>
 </div>
-<div id="长战斗-18" class="section level4 hasAnchor" number="5.4.2.2">
-<h4><span class="header-section-number">5.4.2.2</span> 长战斗<a href="战士系.html#长战斗-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-17" class="section level4 hasAnchor" number="5.4.2.2">
+<h4><span class="header-section-number">5.4.2.2</span> 长战斗<a href="战士系.html#长战斗-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于漂移一旦失去15连就回到解放前，所以牵制与侧闪结合，求稳是最好的。如果实在没底，也可以先上S3把连击数堆上去。</p>
 </div>
 </div>
@@ -428,13 +442,13 @@
 </div>
 <div id="推荐打法-20" class="section level3 hasAnchor" number="5.5.2">
 <h3><span class="header-section-number">5.5.2</span> 推荐打法<a href="战士系.html#推荐打法-20" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-19" class="section level4 hasAnchor" number="5.5.2.1">
-<h4><span class="header-section-number">5.5.2.1</span> 短战斗<a href="战士系.html#短战斗-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-18" class="section level4 hasAnchor" number="5.5.2.1">
+<h4><span class="header-section-number">5.5.2.1</span> 短战斗<a href="战士系.html#短战斗-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>点枪压制与近身压迫性打法，主要使用S2。例如面对路障，用S2击倒他就很放心了。横炮由于是计数规避，所以尽量用小枪压制出了减速再上去打。</p>
 <p>如果觉醒到比较高，也可以利用加气快的特点连续使用S1，尽快结束战斗。注意热破S2在击倒对手后有很大的时间优势，此时压起身不能一落地就冲，否则会踢空。</p>
 </div>
-<div id="长战斗-19" class="section level4 hasAnchor" number="5.5.2.2">
-<h4><span class="header-section-number">5.5.2.2</span> 长战斗<a href="战士系.html#长战斗-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-18" class="section level4 hasAnchor" number="5.5.2.2">
+<h4><span class="header-section-number">5.5.2.2</span> 长战斗<a href="战士系.html#长战斗-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>想要打长战斗，请先等待觉醒。由于气比对方来得快，所以还是围绕S2来打，输出、加气和控气并重。贪心连续使用S1的结果就会造成自己打得很爽，对方的气控不住，又得停下来骗招，耽误减速的时间。</p>
 </div>
 </div>
@@ -507,12 +521,12 @@
 <p>我认为要练好探长，首先要找到办法合理地使用小枪，而不是完全放弃近战只练小枪。首先有个小技巧：探长近战5连击<strong>用轻攻击结束</strong>是抽出枪打一发，这比中攻击要划算，因为这一发按远程小枪命中算，实测也确实可以打出燃烧来。也就是说任何一次命中的近战连击都能保证一发小枪。</p>
 <p>接下来就算你已经能在对枪的时候找到对方的空档来一梭子，要提升伤害还取决于是否暴击。这时，重击施加的降暴抗可以帮到你。地狱弹打出暴击就施加长时间的燃烧，之后如果能连续打中三连枪是可以刷新燃烧的，这是一条加大伤害的途径。而且经实测，<strong>“打中”包括防御！</strong>也就是说对方有燃烧的状态下，对方只要不闪你的三枪，一定就刷新了。同理，精准弹的三枪里有两枪能拆盾，这让探长在对付犀牛的时候更安全。有了这个策略，练好探长的招牌滚动就显得更加重要，因为如果你能滚动闪开对方的两枪并还击，那个射速让电脑至少要防。</p>
 <p>由于探长主要要靠小枪打输出，所以能量积攒得相应要慢一些，所以无论是短还是长战斗，探长都应该主要围绕S1去开发自身两种子弹的额外性能。</p>
-<div id="短战斗-20" class="section level4 hasAnchor" number="5.6.2.1">
-<h4><span class="header-section-number">5.6.2.1</span> 短战斗<a href="战士系.html#短战斗-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-19" class="section level4 hasAnchor" number="5.6.2.1">
+<h4><span class="header-section-number">5.6.2.1</span> 短战斗<a href="战士系.html#短战斗-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>不用一上来就玩远程，近战用轻攻击也有机会打出燃烧，一旦燃烧，找机会用小枪刷新。如果对方防住近战，用重击争取降暴抗。短战斗不用追求触发招牌。</p>
 </div>
-<div id="长战斗-20" class="section level4 hasAnchor" number="5.6.2.2">
-<h4><span class="header-section-number">5.6.2.2</span> 长战斗<a href="战士系.html#长战斗-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-19" class="section level4 hasAnchor" number="5.6.2.2">
+<h4><span class="header-section-number">5.6.2.2</span> 长战斗<a href="战士系.html#长战斗-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>好吧，你已经决定用探长打长战斗了，恭喜。</p>
 <p>先上S3降暴抗之后围绕S1和地狱弹打输出。侧闪小枪时机把握好，触发招牌后小枪命中才会更高。招牌出来时，预判对手侧闪时点枪打时间差（类似阿尔茜和幻影S1之后的战术），命中率会大大提高。</p>
 </div>
@@ -536,7 +550,7 @@
 <p>蝎子的血量在战士系高居榜首，在全游戏中也仅次于6个斗士、震天尊与爆威，排名第9。</p>
 <ul>
 <li>毒液充能：一格气后获得一层毒液（经测试，最多堆10层）。蝎子的毒液可谓稳赚不赔的买卖，因为留在自己身上可加攻，一层就20%，如果觉醒，还回血。通过重击或者S2施加到对手身上成为12秒逆火，对方要么出特殊吃伤害，要么不出特殊，2层逆火过期会晕3秒，3层以上逆火过期吃500%的震击伤害。</li>
-<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>简直是太爽。</li>
+<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a>简直是太爽。</li>
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
 </ul>
 </div>
@@ -557,16 +571,16 @@
 <div id="推荐打法-22" class="section level3 hasAnchor" number="5.7.2">
 <h3><span class="header-section-number">5.7.2</span> 推荐打法<a href="战士系.html#推荐打法-22" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>蝎子的S1/S3技性能相同，S2和重击性能相同，正好演化出了两种不同的打法。</p>
-<div id="短战斗-21" class="section level4 hasAnchor" number="5.7.2.1">
-<h4><span class="header-section-number">5.7.2.1</span> 短战斗<a href="战士系.html#短战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-20" class="section level4 hasAnchor" number="5.7.2.1">
+<h4><span class="header-section-number">5.7.2.1</span> 短战斗<a href="战士系.html#短战斗-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>短战斗时选择毒液给对方，围绕高命中的重击展开近战缠斗，特殊技也用S2，让对方吃逆火伤害。</p>
 </div>
-<div id="长战斗-21" class="section level4 hasAnchor" number="5.7.2.2">
-<h4><span class="header-section-number">5.7.2.2</span> 长战斗<a href="战士系.html#长战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-20" class="section level4 hasAnchor" number="5.7.2.2">
+<h4><span class="header-section-number">5.7.2.2</span> 长战斗<a href="战士系.html#长战斗-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>长战斗时选择毒液给自己。</p>
 <p>打法一适合有防震击手段的敌人（觉醒猩猩，反冲等）或者血厚但没护甲、抗性的敌人。战术是只用S1，不放重击，一路把毒液堆到10层，用200%的攻击加成打架，输出是有保障的。</p>
 <p>打法二适用于比较难啃的硬骨头，他们因为有护甲、抗性或者护盾，需要施加一定DOT或者逆火伤害来保证输出。初期还是坚决不放重击也不放S1，直接等到第一个S3集满，毒液达到3层。</p>
-<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>。</p>
+<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。</p>
 </div>
 </div>
 <div id="基地防守-22" class="section level3 hasAnchor" number="5.7.3">
@@ -633,14 +647,14 @@
 <div id="推荐打法-23" class="section level3 hasAnchor" number="5.8.2">
 <h3><span class="header-section-number">5.8.2</span> 推荐打法<a href="战士系.html#推荐打法-23" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>因为亡灵天尊在放S技会丢失相当数量的充能，可能会使得状态来回切换。开局一般两个七连击可以满一格气，这时是19个充能，要再摸一下才能切换状态，然后放S1的话丢10个，状态又切换回来了。不过因为还剩10个，以及S1之后能量功率的提升，下一次到S1的时候很可能就不止20个充能了。所以如果保持不被击倒的话，充能总体上是越打越多的，不用特别纠结。</p>
-<div id="短战斗-22" class="section level4 hasAnchor" number="5.8.2.1">
-<h4><span class="header-section-number">5.8.2.1</span> 短战斗<a href="战士系.html#短战斗-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-21" class="section level4 hasAnchor" number="5.8.2.1">
+<h4><span class="header-section-number">5.8.2.1</span> 短战斗<a href="战士系.html#短战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于进入势不可挡的力量会让他攻强守弱，连格挡伤害都更高，亡灵天尊在使用时要保护好自己，但由于输出很高，结束战斗也快。</p>
 <p>短战斗优先选择S2，因为攒满两格能量本身已经有10个充能，再加上中间使用的连击，轻轻松松20层以上，这时一个S2下去已经伤害很可观了。</p>
 </div>
 </div>
-<div id="长战斗-22" class="section level3 hasAnchor" number="5.8.3">
-<h3><span class="header-section-number">5.8.3</span> 长战斗<a href="战士系.html#长战斗-22" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="长战斗-21" class="section level3 hasAnchor" number="5.8.3">
+<h3><span class="header-section-number">5.8.3</span> 长战斗<a href="战士系.html#长战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>长战斗可以用好能量控制的能力，频繁使用S1放空自己控制对方能量</p>
 <p>推荐按漂移这种标准的堆连击、少用重击的打法，短战斗围绕S1快速获得能量（频繁放空气槽，也能利用到动态控气的能力）。长战斗可以用S2加一些伤害。S3纯鸡肋，不需要使用。</p>
 </div>
@@ -715,8 +729,11 @@
 <div class="footnotes">
 <hr />
 <ol start="5">
-<li id="fn5"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref5" class="footnote-back">↩︎</a></p></li>
-<li id="fn6"><p>只怕惊天雷<a href="战士系.html#fnref6" class="footnote-back">↩︎</a></p></li>
+<li id="fn5"><p>回想起来，这样的设计可能符合1.0版中阿尔茜只能在出暴击的时候才能得到能量的设定：因为能量来得少，所以S1要更优秀一些。<a href="战士系.html#fnref5" class="footnote-back">↩︎</a></p></li>
+<li id="fn6"><p>曾经S3在猩猩黄甲时上打不出流血，后来修正正常了。<a href="战士系.html#fnref6" class="footnote-back">↩︎</a></p></li>
+<li id="fn7"><p>游戏中并没有提到“延长时间”具体指什么，是指单纯地延长DOT的持续时间（总伤害不变），还是保持原有的伤害速率的前提下延长时间（总伤害增加）？我倾向于认为是后者，因为前者似乎意义不大<a href="战士系.html#fnref7" class="footnote-back">↩︎</a></p></li>
+<li id="fn8"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref8" class="footnote-back">↩︎</a></p></li>
+<li id="fn9"><p>只怕惊天雷<a href="战士系.html#fnref9" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
