--- a/chars_book/术语与打法.html
+++ b/chars_book/术语与打法.html
@@ -170,6 +170,7 @@
 <li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
 <li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
 <li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+<li class="chapter" data-level="10.7" data-path="对战ai策略.html"><a href="对战ai策略.html#在哪找对练"><i class="fa fa-check"></i><b>10.7</b> 在哪找对练？<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -253,6 +254,7 @@
 <div id="绝境搏命" class="section level2 hasAnchor" number="2.7">
 <h2><span class="header-section-number">2.7</span> 绝境搏命<a href="术语与打法.html#绝境搏命" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>有时实在是没有控住气，对方红了，可以反复使用“四拳一侧闪”的方式与对手纠缠，对手往往中了四拳会跟着你一起侧闪继续中招，就算用近战打断你，也可以马上打回去，这种方式可以一定程度上拖延对方放S3的时间打一些输出，甚至给自己加到足够的能量结束战斗。</p>
+<!-- # 近战、远程、物理、能量 -->
 <!--/Note-->
 
 </div>
