--- a/5star.html
+++ b/5star.html
@@ -15,7 +15,7 @@
 
 <title>百炼为战五星人物动态</title>
 
-<script src="5star_files/header-attrs-2.11/header-attrs.js"></script>
+<script src="5star_files/header-attrs-2.13/header-attrs.js"></script>
 
 
 
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">百炼为战五星人物动态</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2022-05-04</h3>
+<h3 class="date">更新时间：2022-05-20</h3>
 </div>
 </header>
 
@@ -46,25 +46,45 @@
 <div id="TOC" class="toc">
 <div class="inner">
 <ul>
-<li><a href="#五星普通池"><span class="toc-section-number">1</span> 五星普通池</a>
+<li><a href="#五星普通池"><span class="toc-section-number">1</span>
+五星普通池</a>
 <ul>
-<li><a href="#第一波2018年4月6.0版"><span class="toc-section-number">1.1</span> 第一波（2018年4月，6.0版）</a></li>
-<li><a href="#第二波2018年8月7.0版"><span class="toc-section-number">1.2</span> 第二波（2018年8月，7.0版）</a></li>
-<li><a href="#第三波2019年6月20日"><span class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
-<li><a href="#第四波"><span class="toc-section-number">1.4</span> 第“四”波</a></li>
-<li><a href="#普通池后续人物"><span class="toc-section-number">1.5</span> 普通池后续人物</a></li>
+<li><a href="#第一波2018年4月6.0版"><span
+class="toc-section-number">1.1</span>
+第一波（2018年4月，6.0版）</a></li>
+<li><a href="#第二波2018年8月7.0版"><span
+class="toc-section-number">1.2</span>
+第二波（2018年8月，7.0版）</a></li>
+<li><a href="#第三波2019年6月20日"><span
+class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
+<li><a href="#第四波"><span class="toc-section-number">1.4</span>
+第“四”波</a></li>
+<li><a href="#普通池后续人物"><span
+class="toc-section-number">1.5</span> 普通池后续人物</a></li>
 </ul></li>
-<li><a href="#通用币人物"><span class="toc-section-number">2</span> 通用币人物</a>
+<li><a href="#通用币人物"><span class="toc-section-number">2</span>
+通用币人物</a>
 <ul>
-<li><a href="#年"><span class="toc-section-number">2.1</span> 2019年</a></li>
-<li><a href="#年-1"><span class="toc-section-number">2.2</span> 2020年</a></li>
-<li><a href="#年-2"><span class="toc-section-number">2.3</span> 2021年</a></li>
-<li><a href="#年-3"><span class="toc-section-number">2.4</span> 2022年</a></li>
+<li><a href="#年"><span class="toc-section-number">2.1</span>
+2019年</a></li>
+<li><a href="#年-1"><span class="toc-section-number">2.2</span>
+2020年</a></li>
+<li><a href="#年-2"><span class="toc-section-number">2.3</span>
+2021年</a></li>
+<li><a href="#年-3"><span class="toc-section-number">2.4</span>
+2022年</a></li>
 </ul></li>
-<li><a href="#世代币人物"><span class="toc-section-number">3</span> 世代币人物</a></li>
-<li><a href="#野兽币人物"><span class="toc-section-number">4</span> 野兽币人物</a></li>
-<li><a href="#泰坦碎片巨人碎片商店人物"><span class="toc-section-number">5</span> 泰坦碎片（巨人碎片）商店人物</a></li>
-<li><a href="#独家人物"><span class="toc-section-number">6</span> 独家人物</a></li>
+<li><a href="#世代币人物"><span class="toc-section-number">3</span>
+世代币人物</a></li>
+<li><a href="#野兽币人物"><span class="toc-section-number">4</span>
+野兽币人物</a></li>
+<li><a href="#冷饭活动"><span class="toc-section-number">5</span>
+冷饭活动</a></li>
+<li><a href="#泰坦碎片巨人碎片商店人物"><span
+class="toc-section-number">6</span>
+泰坦碎片（巨人碎片）商店人物</a></li>
+<li><a href="#独家人物"><span class="toc-section-number">7</span>
+独家人物</a></li>
 </ul>
 </div>
 </div>
@@ -79,7 +99,8 @@
 <h1><span class="header-section-number">1</span> 五星普通池</h1>
 <p>一般指五星碎片水晶能开到的机器人。3~5星水晶和5星专属水晶中除了该水晶专属人物，其他5星也在5星普通池中选人。</p>
 <div id="第一波2018年4月6.0版" class="section level2" number="1.1">
-<h2><span class="header-section-number">1.1</span> 第一波（2018年4月，6.0版）</h2>
+<h2><span class="header-section-number">1.1</span>
+第一波（2018年4月，6.0版）</h2>
 <ul>
 <li>碾碎器，猩猩队长</li>
 <li>阿尔茜，漂移</li>
@@ -90,7 +111,8 @@
 </ul>
 </div>
 <div id="第二波2018年8月7.0版" class="section level2" number="1.2">
-<h2><span class="header-section-number">1.2</span> 第二波（2018年8月，7.0版）</h2>
+<h2><span class="header-section-number">1.2</span>
+第二波（2018年8月，7.0版）</h2>
 <ul>
 <li>钢锁，斗擎</li>
 <li>热破，碎骨魔</li>
@@ -101,7 +123,8 @@
 </ul>
 </div>
 <div id="第三波2019年6月20日" class="section level2" number="1.3">
-<h2><span class="header-section-number">1.3</span> 第三波（2019年6月20日）</h2>
+<h2><span class="header-section-number">1.3</span>
+第三波（2019年6月20日）</h2>
 <ul>
 <li>汽车大师</li>
 <li>雷震</li>
@@ -182,13 +205,14 @@
 </div>
 <div id="年-3" class="section level2" number="2.4">
 <h2><span class="header-section-number">2.4</span> 2022年</h2>
-<p>22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。</p>
+<p>22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。自5月开始则变成了每两周放一批。</p>
 <ul>
 <li>1月：救护车，爵士，红蜘蛛</li>
 <li>2月：声波，雷震，喷气机</li>
 <li>3月：横炮，警车，巨蝎勇士，惊破天</li>
 <li>4月：狂飙，录音机，恐龙勇士，碾碎器</li>
-<li>5月：</li>
+<li>5月前两周：碎骨魔，热破</li>
+<li>5月后两周：猩猩队长，黄豹，野牛，反冲</li>
 <li>6月：</li>
 <li>7月：</li>
 <li>8月：</li>
@@ -200,8 +224,10 @@
 <p>2月4日的时候，游戏公司又宣布了新的人物：闹翻天、G1铁皮确定，另新的启动画面上出现了一名疑似是补天士的角色。</p>
 <p>闹翻天在2月25日登场。</p>
 <p>G1铁皮在3月31日登场。</p>
-<p>4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
+<p>4月12日YouTube的Hasbro
+Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
 <p>5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！</p>
+<p>滑流在5月19日登场。</p>
 </div>
 </div>
 <div id="世代币人物" class="section level1" number="3">
@@ -218,8 +244,13 @@
 <h1><span class="header-section-number">4</span> 野兽币人物</h1>
 <p>指2019年12月卡邦针对BW人物举行的活动。总共就6个BW人物（猩猩队长/巨蝎勇士/黄豹/犀牛/黄蜂勇士/恐龙勇士），尽数上架。</p>
 </div>
-<div id="泰坦碎片巨人碎片商店人物" class="section level1" number="5">
-<h1><span class="header-section-number">5</span> 泰坦碎片（巨人碎片）商店人物</h1>
+<div id="冷饭活动" class="section level1" number="5">
+<h1><span class="header-section-number">5</span> 冷饭活动</h1>
+<p>2022年开始为填补新人物发布间空档期（两周），卡邦会把一些之前的活动重新拿出来。例如霸天虎活动，电影人物活动。套路都是肝主题币，换3/4/5星人物。</p>
+</div>
+<div id="泰坦碎片巨人碎片商店人物" class="section level1" number="6">
+<h1><span class="header-section-number">6</span>
+泰坦碎片（巨人碎片）商店人物</h1>
 <p>以下人物在泰坦碎片商店可以购得，长期有效。</p>
 <table>
 <thead>
@@ -264,8 +295,8 @@
 </tbody>
 </table>
 </div>
-<div id="独家人物" class="section level1" number="6">
-<h1><span class="header-section-number">6</span> 独家人物</h1>
+<div id="独家人物" class="section level1" number="7">
+<h1><span class="header-section-number">7</span> 独家人物</h1>
 <p>除此之外，下列人物的五星版本有独特的方式获取：</p>
 <ul>
 <li>战术大黄蜂：金轮水晶</li>
